Shivansh | Test | Dark Mode For Branch Theme Popup fixes

--- a/apps/web-giddh/src/app/material-ledger/components/advance-search/advance-search.component.scss
+++ b/apps/web-giddh/src/app/material-ledger/components/advance-search/advance-search.component.scss
@@ -33,6 +33,15 @@
     margin-left: 16px;
     margin-top: 9px;
 }
+
+::ng-deep {
+    .advance-search {
+        .clearfix {
+            background-color: var(--popup-background-color) !important;
+        }
+    }
+}
+
 @media (min-width: 1200px) {
     .container {
         width: 100%;
