--- a/apps/web-giddh/src/assets/css/themes/default.scss
+++ b/apps/web-giddh/src/assets/css/themes/default.scss
@@ -70,6 +70,7 @@ body.default-theme {
     --datepicker-header-color: #5b64c9;
     --datepicker-month-name-color: #1c1c1c;
     --datepicker-date-color: #1a237e;
+    --datepicker-secondary-date-color: #000000de;
     --datepicker-date-icon-color: #00000061;
     --datepicker-rightside-list-text-color: #333333;
     --datepicker-rightside-list-primary-color-text-hover: #d2cde6;
